--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Settings.SettingsActivity"></activity>
+        <activity android:name=".Settings.SettingsActivity" />
         <activity android:name=".Login.VerifyPhoneNumberActivity" />
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
